# bert-classification-tutorial-2024

./: LICENSE  README.md  pyproject.toml  run.sh
config/: 1.json  4-ds.json
src/: aggregate.py  prepare.py  train.py  utils.py
